NODE-1815: Replace java.xml.bind to dependency