@@ -88,7 +88,6 @@ inConfig(Universal)(
       "-J-XX:+ExitOnOutOfMemoryError",
       // Java 9 support
       "-J-XX:+IgnoreUnrecognizedVMOptions",
-      "-J--add-modules=java.xml.bind",
       // from https://groups.google.com/d/msg/akka-user/9s4Yl7aEz3E/zfxmdc0cGQAJ
       "-J-XX:+UseG1GC",
       "-J-XX:+UseNUMA",
